Fixed alignment

--- a/style.css
+++ b/style.css
@@ -73,7 +73,6 @@ p, p1 {
 
 .headline {
 	margin:0 auto;
-	padding: 2vw;
 	font-size: 5vw;
 	text-align: center;
 	width:100%;
@@ -83,9 +82,7 @@ p, p1 {
 
 .experienceText {
 	margin:0 3rem;
-	overflow: hidden;
 	overflow-wrap: normal;
-	position: relative;
 }
 .experienceText h3 {
 	font-size: 2vw;
@@ -99,11 +96,13 @@ p, p1 {
 .experienceText li {
 	padding:0.5rem 0;
 	font-size:1.2vw;
+	margin:0 auto;
+	width: 100%;
 }
 .experienceLogo {
 	float: left;
 	position: fixed;
-	padding: 1vw 6vw;
+	padding: 1vw;
 }
 
 .divider {
@@ -112,13 +111,19 @@ p, p1 {
 	width:70%;
 	margin:6vw auto;
 }
+.divider_2 {
+	background-color:#939393;
+	height:1px;
+	width:30%;
+	margin:6vw auto;	
+}
 .programming{
-	padding: 10vw 20vw;
+	padding: 0vw 10vw 0vw 15vw;
 	margin:0 auto;
 	position: relative;
 }
 .programming_icon {
-	font-size: 32px;
+	font-size: 128px;
 }
 /*==More about me==*/
 .extras {
